--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,10 @@ dependencies:
   firebase_storage: ^12.1.0
   google_fonts: ^6.2.1
   google_maps_flutter: ^2.12.3
-  uuid: ^4.4.0
+  uuid: ^4.5.1
+  google_maps_flutter_android: ^2.16.2
+  shared_preferences: ^2.2.3
+  midtrans_sdk: ^1.0.1
 
 dev_dependencies:
   flutter_test:
