--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # Firebase
   firebase_core: ^3.2.0
-  firebase_auth: ^5.1.2
+  firebase_auth: ^5.6.2
   provider:
     ^6.1.2
     # API & Konektivitas
@@ -57,8 +57,12 @@ dependencies:
   uuid: ^4.5.1
   google_maps_flutter_android: ^2.16.2
   shared_preferences: ^2.2.3
+  file_picker: ^10.2.0
+  google_sign_in: ^7.1.0
+  cloud_firestore: ^5.6.11
   midtrans_sdk: ^1.0.1
-
+  webview_flutter: ^4.13.0
+  flutter_dotenv: ^5.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -83,6 +87,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
