--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   midtrans_sdk: ^1.0.1
   webview_flutter: ^4.13.0
   flutter_dotenv: ^5.1.0
+  dio: ^5.8.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
