--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   webview_flutter: ^4.13.0
   flutter_dotenv: ^5.1.0
   dio: ^5.8.0+1
+  path: ^1.9.1
+  firebase_messaging: ^15.2.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
