--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   dio: ^5.8.0+1
   path: ^1.9.1
   firebase_messaging: ^15.2.9
+  encrypt: ^5.0.3
+  crypto: ^3.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
