--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = home_workers_fe
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.homeWorkersFe
+PRODUCT_BUNDLE_IDENTIFIER = com.homeworkers.app
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 Home Workers. All rights reserved.
