--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.6
+  flutter_launcher_icons: ^0.14.1
   flutter_secure_storage: ^9.2.2
   jwt_decoder: ^2.0.1
   intl: ^0.19.0
@@ -121,14 +122,28 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-flutter_native_splash:
-  # Warna background splash screen. Ganti dengan kode hex warna biru Anda.
-  color: "#0E4D92" # Contoh warna Royal Blue
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo_howe_new.png"
 
-  # Path ke gambar logo Anda.
+flutter_native_splash:
+  # Warna background splash screen disesuaikan dengan logo
+  color: "#0xfffff" # Warna biru gelap sesuai tema app
+
+  # Path ke gambar logo asli dengan warna original
   image: assets/logo_howe.png
+
+  # Tambahkan konfigurasi untuk mempertahankan warna logo
+  branding: assets/logo_howe.png
+  branding_mode: bottom
+
+  # Kontrol ukuran logo agar tidak terlalu besar
+  android_gravity: center
+  ios_content_mode: scaleAspectFit
+  android_screen_orientation: portrait
 
   # Konfigurasi untuk Android 12+
   android_12:
     image: assets/logo_howe.png
-    color: "#0E4D92"
+    color: "#0xfffff"
